[tool.poetry]
name = "test"
version = "0.8.0"
description = "Visualizes the state of your nova instance inside of [rerun.io](https://rerun.io). This is intended to be used alongside the [nova python lib](https://github.com/wandelbotsgmbh/wandelbots-nova)."
authors = [
    "Wandelbots GmbH",
    "Stefan Wagner <stefan.wagner@wandelbots.com>",
    "André Kühnert <andre.kuhnert@wandelbots.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rerun-sdk = "^0.21.0"
wandelbots-nova = ">=0.12"
nova_rerun_bridge = ">=0.1"
python-decouple = "^3.8"
requests = "^2.32.3"
APScheduler = "^3.11.0"
scipy = "^1.14.1"
trimesh = "^4.5.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
